--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="blog-svgrepo-com.svg" />
+    <link rel="icon" type="image/svg+xml" href="blog-seo-optimization-search-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>MyBlog</title>
